--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,8 @@
 
+<router-outlet></router-outlet>
 
 
-<div id="home">
-  <app-home></app-home>
-</div>
-<div id="projects">
-  <app-projects></app-projects>
-</div>
-<div id="about">
-  <app-about></app-about>
-</div>
-<div id="contact">
-  <app-contact></app-contact>
-</div>
+
+
 
 
