--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -17,7 +17,7 @@
 
     <!-- Right Side: Squiggly Text Animation -->
     <div class="squiggly-text">
-        <span #textElement class="typing-text">DEVELOPER DESIGNER CONCEPTUALIST</span><span class="typing-cursor"></span>
+        <span #textElement class="typing-text">DEVELOPER DESIGNER CONCEPTUALIST</span>
     </div>
 
     <!-- Navigation at Bottom Right -->
