--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -95,26 +95,12 @@ h2{
     }
 }
 
-/* Typing Cursor Animation */
-.typing-cursor {
-    width: 2px;
-    height: 1em;
-    font-family: 'Sintony';
-    font-size: 3rem;
-    background-color: transparent;
-    animation: blink-caret 0.75s step-end infinite;
-}
-
-@keyframes blink-caret {
-    from, to { background-color: transparent; }
-    50% { background-color: #211f1a; }
-}
 
 @media (max-width: 1024px) {
     .squiggly-text {
         font-size: 40px; 
         left: 50%;
-        transform: translate(-50%, -50%) rotate(-90deg);
+       
         width: 400px; 
         letter-spacing: 3px;
     }
@@ -125,7 +111,7 @@ h2{
         font-size: 30px; 
         left: 50%;
         top: 60%;
-        transform: translate(-50%, -50%) rotate(-90deg);
+        
         width: 300px; 
         letter-spacing: 2px;
     }
@@ -136,7 +122,7 @@ h2{
         font-size: 20px;
         left: 50%;
         top: 70%;
-        transform: translate(-50%, -50%) rotate(-90deg);
+       
         width: 200px;
         letter-spacing: 1px;
     }
@@ -175,3 +161,95 @@ h2{
     transform: scale(1.2);
   }
 
+  @media (max-width: 768px) {
+    .about-container {
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem 1rem;
+    }
+  
+    .about-image img {
+      width: 80%;
+      height: auto;
+      object-fit: contain;
+    }
+  
+    .sideways-title {
+      position: relative;
+      transform: none;
+      left: auto;
+      top: auto;
+      font-size: 2rem;
+    }
+  
+    .about-text {
+      position: relative;
+      top: auto;
+      left: auto;
+      transform: none;
+      width: 90%;
+      text-align: center;
+      font-size: 1rem;
+    }
+  
+    .squiggly-text {
+      font-size: 1.5rem;
+      left: 50%;
+      top: auto;
+      min-height: 160px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: auto;
+      white-space: nowrap;
+      overflow: hidden;
+      position: relative;
+      bottom: 10rem;
+    }
+
+
+  
+    .navigation {
+      position: relative;
+      bottom: auto;
+      right: auto;
+      left: -1rem;
+  
+      ul {
+        justify-content: center;
+        gap: 2rem;
+      }
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .about-container {
+      padding: 1.5rem 1rem;
+    }
+  
+    .about-image img {
+      width: 100%;
+      height: auto;
+    }
+  
+    .sideways-title {
+      font-size: 1.5rem;
+    }
+  
+    .about-text {
+      font-size: 0.9rem;
+    }
+  
+    .squiggly-text {
+      font-size: 1.2rem;
+      width: 150px;
+    }
+  
+    .navigation ul {
+      gap: 1.5rem;
+      font-size: 0.9rem;
+      text-align: center;
+    }
+  }
+  
