--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,7 @@ body {
   width: 0 !important;
   background-color: transparent !important;
 }
+
+#loom-companion-mv3 {
+  display: none !important;
+}
